set(EXAMPLES_INSTALL_DIR "share/rack")

install(FILES rack_example.dxf gui.cfg rack_gui.html tims_rtnet.conf DESTINATION ${EXAMPLES_INSTALL_DIR})

unset(RACK_EXAMPLES_SCRIPTS)

set(RACK_LINUX_EXAMPLE_SCRIPT "${PROJECT_BINARY_DIR}/${EXAMPLES_INSTALL_DIR}/linux_example")
configure_file(linux_example.in ${RACK_LINUX_EXAMPLE_SCRIPT})
set(RACK_EXAMPLES_SCRIPTS ${RACK_EXAMPLES_SCRIPTS} ${RACK_LINUX_EXAMPLE_SCRIPT})

set(RACK_XENOMAI_EXAMPLE_SCRIPT "${PROJECT_BINARY_DIR}/${EXAMPLES_INSTALL_DIR}/xenomai_example")
configure_file(xenomai_example.in ${RACK_XENOMAI_EXAMPLE_SCRIPT})
set(RACK_EXAMPLES_SCRIPTS ${RACK_EXAMPLES_SCRIPTS} ${RACK_XENOMAI_EXAMPLE_SCRIPT})

set(RACK_LOAD_TIMS_LINUX_SCRIPT "${PROJECT_BINARY_DIR}/${EXAMPLES_INSTALL_DIR}/load_tims_linux")
configure_file(load_tims_linux.in ${RACK_LOAD_TIMS_LINUX_SCRIPT})
set(RACK_EXAMPLES_SCRIPTS ${RACK_EXAMPLES_SCRIPTS} ${RACK_LOAD_TIMS_LINUX_SCRIPT})

set(RACK_LOAD_TIMS_XENOMAI_SCRIPT "${PROJECT_BINARY_DIR}/${EXAMPLES_INSTALL_DIR}/load_tims_xenomai")
configure_file(load_tims_xenomai.in ${RACK_LOAD_TIMS_XENOMAI_SCRIPT})
set(RACK_EXAMPLES_SCRIPTS ${RACK_EXAMPLES_SCRIPTS} ${RACK_LOAD_TIMS_XENOMAI_SCRIPT})

set(RACK_LOAD_RACK_SIM_SCRIPT "${PROJECT_BINARY_DIR}/${EXAMPLES_INSTALL_DIR}/load_rack_sim")
configure_file(load_rack_sim.in ${RACK_LOAD_RACK_SIM_SCRIPT})
set(RACK_EXAMPLES_SCRIPTS ${RACK_EXAMPLES_SCRIPTS} ${RACK_LOAD_RACK_SIM_SCRIPT})

set(RACK_UNLOAD_TIMS_LINUX_SCRIPT "${PROJECT_BINARY_DIR}/${EXAMPLES_INSTALL_DIR}/unload_tims_linux")
configure_file(unload_tims_linux.in ${RACK_UNLOAD_TIMS_LINUX_SCRIPT})
set(RACK_EXAMPLES_SCRIPTS ${RACK_EXAMPLES_SCRIPTS} ${RACK_UNLOAD_TIMS_LINUX_SCRIPT})

set(RACK_UNLOAD_TIMS_XENOMAI_SCRIPT "${PROJECT_BINARY_DIR}/${EXAMPLES_INSTALL_DIR}/unload_tims_xenomai")
configure_file(unload_tims_xenomai.in ${RACK_UNLOAD_TIMS_XENOMAI_SCRIPT})
set(RACK_EXAMPLES_SCRIPTS ${RACK_EXAMPLES_SCRIPTS} ${RACK_UNLOAD_TIMS_XENOMAI_SCRIPT})

set(RACK_UNLOAD_RACK_SIM_SCRIPT "${PROJECT_BINARY_DIR}/${EXAMPLES_INSTALL_DIR}/unload_rack_sim")
configure_file(unload_rack_sim.in ${RACK_UNLOAD_RACK_SIM_SCRIPT})
set(RACK_EXAMPLES_SCRIPTS ${RACK_EXAMPLES_SCRIPTS} ${RACK_UNLOAD_RACK_SIM_SCRIPT})

set(RACK_GUI_SCRIPT "${PROJECT_BINARY_DIR}/${EXAMPLES_INSTALL_DIR}/rack_gui")
configure_file(rack_gui.in ${RACK_GUI_SCRIPT})
set(RACK_EXAMPLES_SCRIPTS ${RACK_EXAMPLES_SCRIPTS} ${RACK_GUI_SCRIPT})

install(PROGRAMS ${RACK_EXAMPLES_SCRIPTS} DESTINATION ${EXAMPLES_INSTALL_DIR})
