set(DESTDIR \${DESTDIR})
set(PACKAGE ${PROJECT_NAME})
set(datadir \${datarootdir})
set(RACK_GLOBAL_CPPFLAGS ${CMAKE_CXX_FLAGS})
set(PROJNAME ${PROJECT_NAME})
set(CC ${CMAKE_C_COMPILER})
set(CXX ${CMAKE_CXX_COMPILER})
set(host_alias ${CMAKE_HOST_SYSTEM_PROCESSOR})
set(RACK_TARGET_ARCH ${CMAKE_SYSTEM_PROCESSOR})

set(RACK_CONFIG_SCRIPT "${PROJECT_BINARY_DIR}/scripts/rack-config")
configure_file(rack-config.in ${RACK_CONFIG_SCRIPT})

install(PROGRAMS ${RACK_CONFIG_SCRIPT} DESTINATION bin)
